feat: Toggle course visibility (#55)
* docs(openapi): Add endpoint to toggle course visibility

* refactor(session): Update unauthorized error message

* feat(courses): Endpoint to toggle visibility of a course

* test(courses): Add tests for the endpoint to toggle course visibility
